adesao das musicas

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <span class="close">&times;</span>
             <p>13/01/2022 às 21:23 - Assumo que gosto dela </p>
             <p>15/01/2022 às 19:22 - Tomamos sorvete juntos  </p>
+            <p>19/01/2022 às 19:22 - Sinto que ela não sente o mesmo por mim  </p>
 
         </div>
     </div>
@@ -45,9 +46,13 @@
     <div class="risos">
     <div id="musicas" >
         <h1>Musicas que cantaremos juntos</h1>
-        <iframe src="https://open.spotify.com/embed/playlist/4iICT48Cog8RqldDXH3YkE?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-    </div>
-    <div id="filmes">
+        <div>
+            <iframe  src="https://www.youtube.com/embed/2sJgJxFVjcs"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </div>
+            <iframe  src="https://www.youtube.com/embed/BJAkeUvCL1s"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/pBRJSNxaVEc"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            <iframe  src="https://www.youtube.com/embed/ZC8W6YcTec0"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+       <div id="filmes">
         
 
 
