--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="close">&times;</span>
             <p>13/01/2022 às 21:23 - Assumo que gosto dela </p>
             <p>15/01/2022 às 19:22 - Tomamos sorvete juntos  </p>
-            <p>19/01/2022 às 19:22 - Sinto que ela não sente o mesmo por mim  </p>
+            <p>19/01/2022 - Sinto que ela não sente o mesmo por mim  </p>
 
         </div>
     </div>
