--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <p href="#musicas" id="music" >Musicas</p>
             <p id="heart" ><i href="#mostrar" class="fa fa-heart" aria-hidden="true"></i> </button></p>
             <button id="myBtn" style="background-color: transparent;border: none;"><p>Datas</p></button>
-            <button id="myBtn2" style="background-color: transparent;border: none;"><p>TV</p></button>
         </div>
     </div>
     <div id="myModal" class="modal">
@@ -32,6 +31,7 @@
             <p>13/01/2022 às 21:23 - Assumo que gosto dela </p>
             <p>15/01/2022 às 19:22 - Tomamos sorvete juntos  </p>
             <p>19/01/2022 - Sinto que ela não sente o mesmo por mim  </p>
+            <p>22/01/2022 - estou me doando muito a nada rs  </p>
 
         </div>
     </div>
@@ -53,10 +53,6 @@
             <iframe  src="https://www.youtube.com/embed/ZC8W6YcTec0"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
        <div id="filmes">
-        
-
-
-
     </div>
    
     <script src="./index.js"></script>
